# oasis-data

./: .dockerignore  Dockerfile  README.md  Zero to Production in Rust An Opinionated Introduction to Backend Development.epub
.github/workflows/: build_image.yml  deploy.yml  general.yml
backend/oasis/: .env  Cargo.toml  configuration.yaml
backend/oasis/.sqlx/: query-f4a36a20d3c9d5f1b5dd635d7cbd258c1dff0b23c9c4bb70715cd6bbb8a18aee.json
backend/oasis/configuration/: base.yaml  local.yaml  production.yaml
backend/oasis/migrations/: 20231203213354_create_users_table.sql
backend/oasis/scripts/: init_db.sh
backend/oasis/src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
backend/oasis/src/domain/: new_user.rs  user_email.rs  user_name.rs
backend/oasis/src/routes/: users.rs
backend/oasis/tests/: health_check.rs  register.rs
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: button.css  button.tsx  header1.css  header1.tsx  input.css  input.tsx  summary.css  summary.tsx
frontend/src/pages/: homepage.css  homepage.tsx  login.css  login.tsx  userhome.css  userhome.tsx
