[package]
name = "oasis"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path="src/main.rs"
name = "oasis"

[dependencies]
actix-web = "4.3.1"
config = "0.10"
reqwest = "0.11.22"
serde = "1.0.193"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = {version="1.6.1", features=["v4"]}
chrono = "0.4.31"
log = "0.4.20"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.9"

[dev-dependencies]
once_cell = "1.19.0"
